nivasa-macros/tests/trybuild/module_roles_empty.rs
use nivasa_macros::{module, roles};

#[module({})]
#[roles()]
struct AppModule;

fn main() {}
